# projekat-racunarska-elektronika

./: .gitignore  Cargo.toml  Cross.toml  build.rs  flake.nix
src/: gpio.c  main.rs
ui/: app-window.slint  error-dialog.slint  main.slint
