[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
adb_client = "2.1.17"

[build-dependencies]
cc = "1.2.45"
pkg-config = "0.3.32"
slint-build = "1.12.1"
